bk_ida/gccida/g2/gen_split_961
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_split_961/src/insn-emit.c:8863:21: error: use of undeclared identifier 'machine_mode'
v5 = gen_lowpart( ( machine_mode)v4, operands[1]); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_split_961/src/insn-emit.c:8867:21: error: use of undeclared identifier 'machine_mode'
v8 = gen_lowpart( ( machine_mode)( !v6 + 4), v7); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_split_961/src/insn-emit.c:8876:31: error: use of undeclared identifier 'machine_mode'
v12 = gen_rtx_fmt_ee( PLUS, ( machine_mode)( !v6 + 4), v11, v10); 
                              ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_split_961/src/obj/insn-emit.o] Error 1
